# solanaworks

./: .gitignore  Anchor.toml  CONTRIBUTING.md  README.md  app.json  metro.config.js  package-lock.json  package.json  webpack.config.js
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
programs/solmobile-compute/: Cargo.toml
programs/solmobile-compute/src/: lib.rs
src/: polyfills.ts
src/navigators/: HomeNavigator.tsx
src/screens/: ComputeNetworkScreen.tsx  index.ts
src/screens/components/: DeviceInfo.tsx  EarningsTracker.tsx  NetworkStats.tsx  TaskQueue.tsx
src/services/: ComputeService.ts  DeviceMonitor.ts  PerformanceAnalytics.ts
src/services/agents/: ResourceOptimizationAgent.ts  TaskManagementAgent.ts
src/services/p2p/: DHTTaskDistribution.ts  NetworkResilience.ts  P2PNetworkManager.ts  P2POrchestrator.ts  PeerDiscovery.ts  TaskVerification.ts
