[package]
name = "solmobile-compute"
version = "0.1.0"
description = "SolMobile Compute - Decentralized Physical Infrastructure Network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmobile_compute"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
borsh = "0.10.3" 